WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170564
Follow up to
r209304
, remove line numbers from one more StyleRule construction
https://bugs.webkit.org/show_bug.cgi?id=170564
Summary
Follow up to r209304, remove line numbers from one more StyleRule construction
Tim Horton
Reported
2017-04-06 13:22:29 PDT
Created
attachment 306419
[details]
patch Follow up to
r209304
, remove line numbers from one more StyleRule construction
Attachments
patch
(1.13 KB, patch)
2017-04-06 13:22 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-04-06 13:24:09 PDT
This fixes the WebCore part of the CSS_DEVICE_ADAPTATION build.
Build Bot
Comment 2
2017-04-06 13:24:51 PDT
Attachment 306419
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3
2017-04-06 14:03:48 PDT
Comment on
attachment 306419
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=306419&action=review
> Source/WebCore/ChangeLog:4 > + Follow up to
r209304
, remove line numbers from one more StyleRule construction > + Need the bug URL (OOPS!).
Pls fix.
Tim Horton
Comment 4
2017-04-06 14:12:51 PDT
https://trac.webkit.org/changeset/215059/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug