Follow up to r209304, remove line numbers from one more StyleRule construction https://bugs.webkit.org/show_bug.cgi?id=170564

Reviewed by Simon Fraser.

* css/StyleRule.cpp:
(WebCore::StyleRuleViewport::StyleRuleViewport):
This one was missed in r209304.


Canonical link: https://commits.webkit.org/187488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215059 268f45cc-cd09-0410-ab3c-d52691b4dbfc